fix combo list text-align
git-svn-id: https://svn.bgdi.admin.ch/mf-chsdi/trunk/chsdi@594 e100092c-b5e6-494f-8bdf-19c1ff2a4001

--- a/chsdi/public/GeoAdmin.ux/BodSearch/css/bodsearch.css
+++ b/chsdi/public/GeoAdmin.ux/BodSearch/css/bodsearch.css
@@ -1,3 +1,7 @@
+.x-combo-list {
+    text-align: left;
+}
+
 .bodsearch {
     white-space: normal;
     font-family: tahoma,arial;
